--- a/app.json
+++ b/app.json
@@ -1,17 +1,7 @@
 {
   "pages": [
     "pages/qidong/qidong",
-    "pages/uploadpage/uploadpage"
-  ],
-  "window": {
-    "backgroundColor": "#000", 
-    "backgroundTextStyle": "light",
-    "navigationBarBackgroundColor": "#000",
-    "navigationBarTitleText": "",
-    "navigationBarTextStyle": "white"
-  },
-  "style": "v2",
-  "componentFramework": "glass-easel",
-  "sitemapLocation": "sitemap.json",
-  "lazyCodeLoading": "requiredComponents"
+    "pages/uploadpage/uploadpage",
+    "pages/homepage/homepage"
+  ]
 }
