--- a/app.json
+++ b/app.json
@@ -1,7 +1,27 @@
 {
   "pages": [
     "pages/qidong/qidong",
-    "pages/uploadpage/uploadpage",
-    "pages/homepage/homepage"
-  ]
+    "pages/homepage/homepage",
+    "pages/uploadpage/uploadpage"
+  ],
+  "tabBar": {
+      "custom": true,
+      "color": "#7A7E83",
+      "selectedColor": "#3cc51f",
+      "borderStyle": "black",
+      "list": [
+        {
+          "pagePath": "pages/homepage/homepage",
+          "iconPath": "static/icon/home.png",
+          "selectedIconPath": "static/icon/tohome.png",
+          "text": ""
+        },
+        {
+          "pagePath": "pages/uploadpage/uploadpage",
+          "iconPath": "static/icon/upload.png",
+          "selectedIconPath": "static/icon/toupload.png",
+          "text": ""
+        }
+      ]
+    }
 }
